edited Froyo Orders

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Froyo</title>
-</head>
-<body>
-    <script src="script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Froyo Orders</title>
+    <script src="script.js" defer></script>
+  </head>
+  <body>
+    <h1>Froyo Order Counter</h1>
+    <p>Check the console for your order breakdown!</p>
+  </body>
 </html>
